crates/macros/tests/debug_job/fail/not_async.rs
use blueprint_macros::debug_job;

#[debug_job]
fn handler() {}

fn main() {}
