crates/macros/tests/debug_job/fail/not_async.stderr
error: Jobs must be `async fn`s
 --> tests/debug_job/fail/not_async.rs:4:1
  |
4 | fn handler() {}
  | ^^
